force-app/main/default/objects/Individual/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Identifica el correo electrónico del individuo</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>