force-app/main/default/objects/Individual/fields/Encuestas_satisfaccion__c.field-meta.xml
<CustomField>
    <fullName>Encuestas_satisfaccion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si se consiente el envío de encuestas</description>
    <label>Encuestas de satisfacción</label>
    <type>Checkbox</type>
</CustomField>