force-app/main/default/objects/Individual/fields/Fecha_encuestas__c.field-meta.xml
<CustomField>
    <fullName>Fecha_encuestas__c</fullName>
    <description>Fecha en la que se ha modificado por última vez el campo Fecha_encuestas__c</description>
    <label>Fecha modificación encuestas</label>
    <type>DateTime</type>
</CustomField>