force-app/main/default/objects/Individual/fields/Fecha_promociones__c.field-meta.xml
<CustomField>
    <fullName>Fecha_promociones__c</fullName>
    <description>Fecha en la que se ha modificado por última vez el campo Promociones__c</description>
    <label>Fecha modificación promociones</label>
    <type>DateTime</type>
</CustomField>