force-app/main/default/objects/Individual/fields/Hash__c.field-meta.xml
<CustomField>
    <fullName>Hash__c</fullName>
    <description>Código de identificación del individuo</description>
    <label>Hash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>