force-app/main/default/objects/Individual/fields/Hash_encoded__c.field-meta.xml
<CustomField>
    <fullName>Hash_encoded__c</fullName>
    <description>Utilizado para enviarlo en el correo.</description>
    <formula>SUBSTITUTE( SUBSTITUTE ( SUBSTITUTE(Hash__c, &apos;=&apos;, &apos;%3D&apos;), &apos;/&apos;, &apos;%2F&apos;)  , &apos;+&apos;, &apos;%2B&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hash encoded</label>
    <type>Text</type>
</CustomField>