force-app/main/default/objects/Individual/fields/Modificado__c.field-meta.xml
<CustomField>
    <fullName>Modificado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si las preferencias se han modificado desde la Site</description>
    <label>Modificado</label>
    <type>Checkbox</type>
</CustomField>