force-app/main/default/objects/Individual/fields/Modificado_desde__c.field-meta.xml
<CustomField>
    <fullName>Modificado_desde__c</fullName>
    <label>Modificado desde</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Site</fullName>
            </value>
            <value>
                <fullName>Web Clientes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>