force-app/main/default/objects/Individual/fields/Promociones__c.field-meta.xml
<CustomField>
    <fullName>Promociones__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si se consiente el envío de promociones</description>
    <label>Campañas y promociones</label>
    <type>Checkbox</type>
</CustomField>